--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.4",
+    "immer": "^8.0.0",
+    "lodash": "^4.17.20",
     "next": "10.0.3",
+    "postcss": "^8.2.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
+    "tailwindcss": "^2.0.1",
+    "wordpos": "^2.0.0"
   }
 }
