--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.9.2",
     "autoprefixer": "^10.0.4",
     "immer": "^8.0.0",
     "lodash": "^4.17.20",
@@ -20,7 +21,9 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.30.0",
     "tailwindcss": "^2.0.1",
+    "wordnet-db": "^3.1.14",
     "wordpos": "^2.0.0"
   }
 }
