--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -34,6 +32,8 @@ yarn-error.log*
 
 # dependencies
 /node_modules
+/api/node_modules
+/client/node_modules
 /.pnp
 .pnp.js
 
