--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "antd": "^4.9.2",
@@ -24,6 +25,17 @@
     "sass": "^1.30.0",
     "tailwindcss": "^2.0.1",
     "wordnet-db": "^3.1.14",
-    "wordpos": "^2.0.0"
+    "wordpos": "^2.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@testing-library/jest-dom": "^5.1.0",
+    "@testing-library/react": "^9.4.0",
+    "babel-jest": "^26.6.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "node-mocks-http": "^1.9.0",
+    "react-test-renderer": "^17.0.1"
   }
 }
