--- a/package.json
+++ b/package.json
@@ -8,8 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^0.2.0",
+    "@reduxjs/toolkit": "^1.5.0",
+    "@types/react": "^17.0.0",
+    "isomorphic-unfetch": "^3.1.0",
+    "lodash": "^4.17.20",
     "next": "10.0.3",
+    "next-redux-wrapper": "^6.0.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-modal": "^3.12.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "reduxsauce": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.165",
+    "@types/node": "^14.14.11",
+    "@types/redux-saga": "^0.10.5",
+    "autoprefixer": "^10.1.0",
+    "postcss": "^8.2.1",
+    "tailwindcss": "^2.0.1",
+    "typescript": "^4.1.2"
   }
 }
