--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@headlessui/react": "^0.2.0",
@@ -23,10 +24,17 @@
     "reduxsauce": "^1.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.18",
     "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.11",
     "@types/redux-saga": "^0.10.5",
     "autoprefixer": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "node-mocks-http": "^1.9.0",
     "postcss": "^8.2.1",
     "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2"
