--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.20",
     "next": "10.0.3",
     "next-redux-wrapper": "^6.0.2",
+    "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-modal": "^3.12.1",
