--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.1.0",
     "next": "10.0.3",
     "postcss": "^8.2.1",
