--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.1.0",
+    "lodash.where": "^3.1.0",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
