--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@svgr/webpack": "^5.5.0",
     "autoprefixer": "^10.1.0",
     "lodash.where": "^3.1.0",
+    "moment": "^2.29.1",
     "next": "10.0.3",
     "postcss": "^8.2.1",
     "react": "17.0.1",
