--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "autoprefixer": "^10.1.0",
@@ -18,6 +19,10 @@
   "devDependencies": {
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.0.1",
+    "test-listen": "^1.1.0",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
 }
