--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   "devDependencies": {
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
-    "supertest": "^6.0.1",
-    "test-listen": "^1.1.0",
-    "ts-jest": "^26.4.4",
+    "node-mocks-http": "^1.9.0",
     "typescript": "^4.1.3"
   }
 }
