--- a/package.json
+++ b/package.json
@@ -5,11 +5,30 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
+    "@types/jest": "^26.0.19",
+    "@types/react-redux": "^7.1.12",
+    "autoprefixer": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "clsx": "^1.1.1",
+    "jest": "^26.6.3",
+    "moment": "^2.29.1",
     "next": "10.0.3",
+    "postcss": "^8.2.1",
+    "qs": "^6.9.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.12",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.2"
   }
 }
