--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-	"dev": "next dev",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start"
 	},
@@ -13,8 +13,14 @@
 		"dotenv": "^8.2.0",
 		"next": "10.0.3",
 		"postcss": "^8.2.1",
+		"postcss-flexbugs-fixes": "^5.0.2",
+		"postcss-import": "^13.0.0",
+		"postcss-preset-env": "^6.7.0",
+		"precss": "^4.0.0",
 		"react": "17.0.1",
 		"react-dom": "17.0.1",
-		"tailwindcss": "^2.0.2"
+		"sass": "^1.30.0",
+		"tailwindcss": "^2.0.2",
+		"use-debounce": "^5.2.0"
 	}
 }
