added pre-commit hooks

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "*": "prettier --write"
   },
   "dependencies": {
     "autoprefixer": "10.1.0",
