--- a/package.json
+++ b/package.json
@@ -14,18 +14,21 @@
     }
   },
   "lint-staged": {
-    "*": "prettier --write"
+    "*.{js,css}": "prettier --write"
   },
   "dependencies": {
     "autoprefixer": "10.1.0",
     "fast-sort": "2.2.0",
     "fuzzy-search": "3.2.1",
-    "husky": "^4.3.6",
     "next": "10.0.3",
     "postcss": "8.2.1",
-    "prettier": "2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "2.0.2"
+  },
+  "devDependencies": {
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1"
   }
 }
