--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "10.1.0",
     "fast-sort": "2.2.0",
     "fuzzy-search": "3.2.1",
+    "lodash.groupby": "^4.6.0",
     "next": "10.0.3",
     "postcss": "8.2.1",
     "react": "17.0.1",
