--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "prettier --write"
+    "lint": "prettier --write",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "husky": {
     "hooks": {
@@ -17,6 +20,7 @@
     "*.{js,jsx,ts,css}": "prettier --write"
   },
   "dependencies": {
+    "antd": "^4.9.4",
     "autoprefixer": "10.1.0",
     "fast-sort": "2.2.0",
     "fuzzy-search": "3.2.1",
@@ -29,6 +33,7 @@
   },
   "devDependencies": {
     "husky": "^4.3.6",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1"
   }
