--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "tailwindcss": "2.0.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^26.6.3",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "node-mocks-http": "^1.9.0",
     "prettier": "^2.2.1"
   }
 }
