--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "antd": "^4.9.4",
     "autoprefixer": "10.1.0",
+    "axios": "^0.21.1",
     "fast-sort": "2.2.0",
     "fuzzy-search": "3.2.1",
     "lodash.groupby": "^4.6.0",
